--- a/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
@@ -3,5 +3,101 @@
 {% extends "MuseeSiteBundle::layout.html.twig" %}
 
 {% block body %}
-	<p>4</p>
+	<div class="container-fluid">
+		<div class="row-fluid pagination-centered">
+			<div id="contact-img" class="span3">
+				<div  class="thumbnail"><img src="{{ asset('style/thumbnail.jpg') }}" alt="Musee" title="Musee"></div>
+			</div>
+			<div class="offset1 span6">
+				<table class="table table-striped table-hover table-bordered ">
+					<caption>
+						<h4>Horaires d'ouverture</h4>
+					</caption>
+					<thead>
+						<tr>
+							<th>Jour</th>
+							<th>Horaires</th>
+						<tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>Lundi</th>
+							<th>8h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Mardi</th>
+							<th>8h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Mercredi</th>
+							<th>8h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Jeudi</th>
+							<th>8h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Vendredi</th>
+							<th>8h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Samedi</th>
+							<th>14h00 - 18h00</th>
+						<tr>
+						<tr>
+							<th>Dimanche</th>
+							<th>Fermé</th>
+						<tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span4">
+				<address class="well">
+					<strong>Musée de Kourou</strong><br>
+					Route de l’espace<br>
+					97310 Kourou<br>
+					Téléphone : 05 94 33 53 84
+				</address>
+				<br>
+				<table class="table table-striped table-hover table-bordered ">
+					<caption>
+						<h4>Tarifs entrée</h4>
+					</caption>
+					<tbody>
+					<tr>
+						<th style="text-align: center;" colspan="2"><h5>Plein Tarif</h5></th>
+					</tr>
+					<tr>
+						<th>Adulte</th>
+						<th>7 euros</th>
+					</tr>
+					<tr>
+						<th>Enfant de moins de 10 ans</th>
+						<th>4 euros</th>
+					</tr>
+					<tr>
+						<th style="text-align: center;" colspan="2"><h5>Tarif réduit</h5></th>
+					</tr>
+					<tr>
+						<th>Adulte</th>
+						<th>4 euros</th>
+					</tr>
+					<tr>
+						<th>Enfant de moins de 10 ans</th>
+						<th>2.50 euros</th>
+					</tr>
+					</tbody>
+				</table>
+					
+			</div>
+			<div class="offset1 span5 well" >
+				<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?near=Route+de+l'Espace,+Guyane+fran%C3%A7aise&amp;geocode=CUn2Nf1vAh0hFQXkTgAd3N_b_Cnzdd-x-FsOjTFHmUkc8qNYBQ&amp;q=museum&amp;f=l&amp;sll=5.17019,-52.694807&amp;sspn=0.018101,0.033023&amp;ie=UTF8&amp;hq=museum&amp;hnear=&amp;t=m&amp;ll=5.169074,-52.683745&amp;spn=0.006295,0.033939&amp;output=embed"></iframe><br /><small><a href="https://maps.google.fr/maps?near=Route+de+l'Espace,+Guyane+fran%C3%A7aise&amp;geocode=CUn2Nf1vAh0hFQXkTgAd3N_b_Cnzdd-x-FsOjTFHmUkc8qNYBQ&amp;q=museum&amp;f=l&amp;sll=5.17019,-52.694807&amp;sspn=0.018101,0.033023&amp;ie=UTF8&amp;hq=museum&amp;hnear=&amp;t=m&amp;ll=5.169074,-52.683745&amp;spn=0.006295,0.033939&amp;source=embed" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
+			</div>			
+		</div>
+	</div>
+	
+	<script src="bootstrap/js/jquery.js"></script>
+	<script src="bootstrap/js/bootstrap.js"></script>
 {% endblock %}
