update the layout and delete FOSuser and fixtures init lines which caused a fatal error

--- a/src/Musee/SiteBundle/Resources/views/Site/aPropos.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/aPropos.html.twig
@@ -4,6 +4,28 @@
 {% extends "MuseeSiteBundle::layout.html.twig" %}
 
 {% block body %}
-	
+	<div class="container-fluid">
+		<div class="page-header"><h1>A Propos</h1></div>
+		<div class="row-fluid">
+			<div class="span12 well">
+				Le musée de l'espace situé dans le Centre Spatial Guyanais non loin de la base de lancement opérationnelle des fusées Ariane est un lieu de découverte et de vulgarisation des sciences et technologies de l'espace sur 1200m² à destination d'un public souhaitant enrichir sa culture scientifique et technique.<br>
+				Vous embarquez pour un voyage à bord d'un vaisseau spatial au travers de plusieurs expositions permanentes et ponctuelles qui vous sont proposées tout au long de l'année.<br>
+				A savoir l'incontournable lanceur Ariane sous forme de maquette en taille réelle que vous pouvez observer et comparer par rapport à la taille moyenne d'un humain devant l'entrée du musée.<br>
+				A l'intérieur de l'établissement dans un cadre assez obscur évoquant l'espace, vous accédez au temple de l'information par plusieurs modules mis en place thématiques comprenant plusieurs maquettes et qui offre un parcours diversifié de l'aventure spatiale mondiale et surtout européenne :<br>
+				<ul>
+					<li>la conquête de l'espace</li>
+					<li>du rêve à la réalité</li>
+					<li>les lanceurs européens</li>
+					<li>les satellites</li>
+					<li>les charges utiles d'application scientifiques</li>
+					<li>le futur</li>
+				</ul>
+				Pour les enfants des animations lego sont mis en place à la merci de leur imagination.
+				Sont mis également à votre disposition des sélections de films scientifiques et techniques et des expositions d'appareils de mesures et de libre consultation sur l'impact des activités spatiales.
+				Des spectacles tels que des présentations des activités spatiales, alunissage d'un être humain, préparation au lancement sont organisés.
+
+			</div>
+		</div>
+	</div>
 	
 {% endblock %}
