--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,11 +24,11 @@
 					<div class="container">
 						
 						<ul class="nav">
-							<li><a href="#header" class="scroll">Accueil</a></li>
-							<li><a href="#vad" class="scroll">Articles</a></li>
-							<li><a href="#hur" class="scroll">A propos</a></li>
-							<li><a href="{{ path('musee_infosPratiques')}}" class="scroll">Infos pratiques</a></li>
-							<li><a href="#f" target="_blank">Contact</a></li>
+							<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
+							<li><a href="#">Articles</a></li>
+							<li><a href="{{ path('musee_aPropos') }}">A propos</a></li>
+							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
+							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -40,6 +40,8 @@
 		{% block body %}
 			
 		{% endblock %}
+		<script src="bootstrap/js/jquery.js"></script>
+		<script src="bootstrap/js/bootstrap.js"></script>
 	</body>
 	
 </html>
