--- a/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
@@ -3,5 +3,28 @@
 {% extends "MuseeSiteBundle::layout.html.twig" %}
 
 {% block body %}
-	<p>3</p>
+	<div class="container-fluid">
+			<div class="page-header"><h1>Nous Contacter</h1></div>
+			<div class="row-fluid">
+				<div class="span2">
+					<h4>Par Courrier</h4>
+					<hr>
+					<address class="well well-small">
+						<strong>Musée de Kourou</strong><br>
+						Route de l'espace<br>
+						97310 Kourou<br>
+						Guyane française
+					</address>
+				</div>
+			
+				<div class="offset1 span2">
+					<h4>Par Téléphone</h4>
+					<hr>
+					<h6>Téléphone : 05 94 33 53 84</h6>
+				</div>
+			</div>
+			<div class="row-fluid">
+				
+			</div>
+		</div>
 {% endblock %}
