view encoded in UTF8

--- a/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
@@ -46,7 +46,7 @@
 						<tr>
 						<tr>
 							<th>Dimanche</th>
-							<th>Fermé</th>
+							<th>FermÃ©</th>
 						<tr>
 					</tbody>
 				</table>
@@ -55,15 +55,15 @@
 		<div class="row-fluid">
 			<div class="span4">
 				<address class="well">
-					<strong>Musée de Kourou</strong><br>
-					Route de l’espace<br>
+					<strong>MusÃ©e de Kourou</strong><br>
+					Route de l'espace<br>
 					97310 Kourou<br>
-					Téléphone : 05 94 33 53 84
+					TÃ©lÃ©phone : 05 94 33 53 84
 				</address>
 				<br>
 				<table class="table table-striped table-hover table-bordered ">
 					<caption>
-						<h4>Tarifs entrée</h4>
+						<h4>Tarifs entrÃ©e</h4>
 					</caption>
 					<tbody>
 					<tr>
@@ -78,7 +78,7 @@
 						<th>4 euros</th>
 					</tr>
 					<tr>
-						<th style="text-align: center;" colspan="2"><h5>Tarif réduit</h5></th>
+						<th style="text-align: center;" colspan="2"><h5>Tarif rÃ©duit</h5></th>
 					</tr>
 					<tr>
 						<th>Adulte</th>
