Some bugs in the adding form solved

--- a/src/Musee/CollectionBundle/Resources/views/Collection/ajouter.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/ajouter.html.twig
@@ -10,7 +10,6 @@
   </form>
 </div>
 
-<!--  Pour mettre un label à chaque input dur form :{{ form_label(form.name, 'Votre nom') }} -->
+<!--  Pour mettre un label à chaque input dur form :{# {{ form_label(form.name, 'Votre nom') }} #} -->
 {% endblock %}
 
-< {{ form_label(form.name, 'Votre nom') }}
