--- a/src/Musee/CollectionBundle/Resources/views/Collection/modifier.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/modifier.html.twig
@@ -1,3 +1,3 @@
 {# src/Musee/CollectionBundle/Resources/views/Collection/modifier.html.twig #}
 
-{% extends "MuseeCollectionBundle::ajouter.html.twig %}
+{% extends "MuseeCollectionBundle:Collection:ajouter.html.twig" %}
