--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -25,7 +25,7 @@
 						
 						<ul class="nav">
 							<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
-							<li><a href="#">Articles</a></li>
+							<li><a href="{{ path('musee_blog_afficher_liste', {'page' : 1}) }}">Articles</a></li>
 							<li><a href="{{ path('musee_aPropos') }}">A propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
