solve display problems on article

--- a/src/Musee/BlogBundle/Resources/views/Article/afficherListe.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficherListe.html.twig
@@ -12,7 +12,7 @@
 							<img src="{{ asset(article.image.webPath) }}" alt="{{article.image.alt}}">
 						</div>
 					{% endif %}
-					{{article.contenu|e('html')}}
+					{{article.contenu|raw}}
 					{{article.auteur}}
 					<div class="pull-right">
 						<a class="btn btn-success" href="{{ path('musee_blog_modifier', {'id' : article.id}) }}">Modifier</a>
