design man! it's cool

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
 			<nav id="nav" class="navbar navbar-inverse navbar-static-top" >
 				<div class="navbar-inner">
 					<div class="pull-left">
-						<a class="brand" href="#header">Kourou</a>
+						<a class="brand" href="#header">Musée de Kourou</a>
 					</div>
 				
 					<div class="container fluid">
@@ -27,7 +27,7 @@
 							<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
 							<li><a href="{{ path('musee_blog_afficher_liste', {'page' : 1}) }}">Articles</a></li>
 							<li><a href="{{ path('musee_collection_afficher_liste', {'page' : 1}) }}">Collection</a></li>
-							<li><a href="{{ path('musee_aPropos') }}">A propos</a></li>
+							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
 							<li><a href="{{ path('musee_contact') }}">Admin</a></li>
