--- a/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
@@ -4,9 +4,10 @@
 
 {% block body %}
 	<div class="container-fluid">
+		<div class="offset2 span12 well" id="conteneur">
 			<div class="page-header"><h1>Nous Contacter</h1></div>
 			<div class="row-fluid">
-				<div class="span2">
+				<div class="span3">
 					<h4>Par Courrier</h4>
 					<hr>
 					<address class="well well-small">
@@ -17,7 +18,7 @@
 					</address>
 				</div>
 			
-				<div class="offset1 span2">
+				<div class="offset1 span3">
 					<h4>Par Téléphone</h4>
 					<hr>
 					<h6>Téléphone : 05 94 33 53 84</h6>
@@ -27,4 +28,5 @@
 				
 			</div>
 		</div>
+	</div>
 {% endblock %}
