--- a/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
@@ -4,11 +4,12 @@
 
 {% block body %}
 	<div class="container-fluid">
+		<div class="offset2 span12 well" id="conteneur">
 		<div class="row-fluid pagination-centered">
-			<div id="contact-img" class="span3">
+			<div id="contact-img" class="span5">
 				<div  class="thumbnail"><img src="{{ asset('style/thumbnail.jpg') }}" alt="Musee" title="Musee"></div>
 			</div>
-			<div class="offset1 span6">
+			<div class="span7">
 				<table class="table table-striped table-hover table-bordered ">
 					<caption>
 						<h4>Horaires d'ouverture</h4>
@@ -52,8 +53,10 @@
 				</table>
 			</div>
 		</div>
+		</div>
+		<div class="offset2 span12 well" id="conteneur">
 		<div class="row-fluid">
-			<div class="span4">
+			<div class="span5">
 				<address class="well">
 					<strong>Musée de Kourou</strong><br>
 					Route de l'espace<br>
@@ -92,9 +95,10 @@
 				</table>
 					
 			</div>
-			<div class="offset1 span5 well" >
+			<div class="span7 well" >
 				<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?near=Route+de+l'Espace,+Guyane+fran%C3%A7aise&amp;geocode=CUn2Nf1vAh0hFQXkTgAd3N_b_Cnzdd-x-FsOjTFHmUkc8qNYBQ&amp;q=museum&amp;f=l&amp;sll=5.17019,-52.694807&amp;sspn=0.018101,0.033023&amp;ie=UTF8&amp;hq=museum&amp;hnear=&amp;t=m&amp;ll=5.169074,-52.683745&amp;spn=0.006295,0.033939&amp;output=embed"></iframe><br /><small><a href="https://maps.google.fr/maps?near=Route+de+l'Espace,+Guyane+fran%C3%A7aise&amp;geocode=CUn2Nf1vAh0hFQXkTgAd3N_b_Cnzdd-x-FsOjTFHmUkc8qNYBQ&amp;q=museum&amp;f=l&amp;sll=5.17019,-52.694807&amp;sspn=0.018101,0.033023&amp;ie=UTF8&amp;hq=museum&amp;hnear=&amp;t=m&amp;ll=5.169074,-52.683745&amp;spn=0.006295,0.033939&amp;source=embed" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
 			</div>			
+		</div>
 		</div>
 	</div>
 
