--- a/src/Musee/SiteBundle/Resources/views/Site/aPropos.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/aPropos.html.twig
@@ -5,7 +5,8 @@
 
 {% block body %}
 	<div class="container-fluid">
-	<div class="offset2 span12 well" id="conteneur">
+	<div class="row-fluid">
+	<div class="offset2 span8 well" id="conteneur">
 		<div class="page-header"><h1>À Propos</h1></div>
 		<div class="row-fluid">
 			<div class="span12 well">
@@ -27,6 +28,7 @@
 
 			</div>
 		</div>
+	</div>
 	</div>
 	</div>
 	
