--- a/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/contact.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
 	<div class="container-fluid">
-		<div class="offset2 span12 well" id="conteneur">
+	<div class="row-fluid">
+		<div class="offset2 span8 well" id="conteneur">
 			<div class="page-header"><h1>Nous Contacter</h1></div>
 			<div class="row-fluid">
 				<div class="span3">
@@ -28,5 +29,6 @@
 				
 			</div>
 		</div>
+	</div>
 	</div>
 {% endblock %}
