--- a/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/infosPratiques.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
 	<div class="container-fluid">
-		<div class="offset2 span12 well" id="conteneur">
+	<div class="row-fluid">
+		<div class="offset2 span8 well" id="conteneur">
 		<div class="row-fluid pagination-centered">
 			<div id="contact-img" class="span5">
 				<div  class="thumbnail"><img src="{{ asset('style/thumbnail.jpg') }}" alt="Musee" title="Musee"></div>
@@ -54,7 +55,9 @@
 			</div>
 		</div>
 		</div>
-		<div class="offset2 span12 well" id="conteneur">
+	</div>
+	<div class="row-fluid">
+		<div class="offset2 span8 well" id="conteneur">
 		<div class="row-fluid">
 			<div class="span5">
 				<address class="well">
@@ -100,6 +103,7 @@
 			</div>			
 		</div>
 		</div>
+	</div>
 	</div>
 
 {% endblock %}
