now using email address to login

--- a/src/Musee/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Musee/UserBundle/Resources/views/Security/login.html.twig
@@ -13,15 +13,15 @@
 				
 				<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-				<label for="username">{{ 'Nom utilisateur'|trans({}, 'FOSUserBundle') }}</label>
+				<label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
 				<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-				<label for="password">{{ 'mot de passe'|trans({}, 'FOSUserBundle') }}</label>
+				<label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
 				<input type="password" id="password" name="_password" required="required" />
 				
 				<label for="remember_me">
 				<input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-				{{ 'Se souvenir de moi'|trans({}, 'FOSUserBundle') }}</label>
+				{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
 				<br>
 
 				<input type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary btn-large"/>
