--- a/src/Musee/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Musee/UserBundle/Resources/views/Security/login.html.twig
@@ -14,7 +14,7 @@
 				<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
 				<label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-				<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+				<input type="email" id="username" name="_username" value="{{ last_username }}" required="required" />
 
 				<label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
 				<input type="password" id="password" name="_password" required="required" />
