--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -30,7 +30,7 @@
 							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
-							<li><a href="{{ path('musee_pageAdmin') }}">Admin</a></li>
+							<li><a href="{{ path('musee_pageEnregistrementAdmin') }}">Admin</a></li>
 								
 								
 						</ul>
