admin interface updated

--- a/src/Musee/SiteBundle/Resources/views/Site/register.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/register.html.twig
@@ -11,8 +11,8 @@
 					<li class="active">
 					<a href="{{ path('musee_pageEnregistrementAdmin') }}">Enregistrer</a>
 					</li>
-					<li><a href="{{ path('musee_pageListeModifUserAdmin') }}">Modifier</a></li>
-					<li><a href="#">Supprimer</a></li>
+					<li><a href="{{ path('musee_pageListeModifUserAdmin', {'page' : 1}) }}">Modifier</a></li>
+					<li><a href="{{ path('musee_pageListeSupprUserAdmin', {'page' : 1}) }}">Supprimer</a></li>
 				</ul>
 			
 				<div class="well">
