--- a/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
@@ -2,14 +2,28 @@
 
 {% extends "::layout.html.twig" %}
 {% block body %}
-<script src="{{ asset('CKEditor/ckeditor/ckeditor.js') }}" type="text/javascript"></script>
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="offset2 span8">
-			<h3>{{article.titre}}</h3>
-			{{article.contenu}}
-			{{article.auteur}}
+{% for article in articles %}
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="offset2 span8 well">
+					{% if article.image is not null %}
+						<div class="pull-left thumbnail span4" style="margin-right:5%; margin-left:0%">
+							<img src="{{ asset(article.image.webPath) }}" alt="{{article.image.alt}}">
+						</div>
+					{% endif %}
+					<div style="padding-top:5%">
+					<h3 style="padding-top:0%">{{article.titre}}</h3>
+					<p><small>{{article.date|date('d-m-Y')}}</small></p>
+					<p>{{article.contenu|raw}}</p>
+					<p>{{article.auteur}}</p>
+					<p><small class="pull-right">{{article.dateEdition|date('d-m-Y')}}</small></p>
+					</div>
+					<div class="pull-right">
+						<a class="btn btn-success" href="{{ path('musee_blog_modifier', {'slug' : article.slug}) }}">Modifier</a>
+						<a class="btn btn-danger" href="{{ path('musee_blog_supprimer', {'slug' : article.slug}) }}">Supprimer</a>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
+	{% endfor %}
 {% endblock %}
