--- a/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
@@ -2,7 +2,7 @@
 
 {% extends "::layout.html.twig" %}
 {% block body %}
-{% for article in articles %}
+	{% for article in articles %}
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<div class="offset2 span8 well">
@@ -26,4 +26,5 @@
 			</div>
 		</div>
 	{% endfor %}
+	{% include 'ajouterCommentaire.html' %}
 {% endblock %}
