--- a/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
@@ -25,6 +25,7 @@
 				</div>
 			</div>
 		</div>
+		{% render "MuseeBlogBundle:Article:ajouterCommentaire" with { article: article } %}
 	{% endfor %}
-	{% include 'ajouterCommentaire.html' %}
+	
 {% endblock %}
