--- a/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
@@ -25,6 +25,7 @@
 						</p>
 					</div>
 					<div class="pull-right">
+						<a class="btn btn-info" href="{{ path('musee_collection_afficher', {'id': objet.id}) }}">afficher</a>
 						<a class="btn btn-success" href="{{ path('musee_collection_modifier', {'id': objet.id}) }}">Modifier</a>
 						<a class="btn btn-danger" href="{{ path('musee_collection_supprimer', {'id': objet.id}) }}">Supprimer</a>
 					</div>
@@ -49,6 +50,7 @@
 						</p>
 					</div>
 					<div class="pull-right">
+						<a class="btn btn-info" href="{{ path('musee_collection_afficher', {'id': objet.id}) }}">afficher</a>
 						<a class="btn btn-success" href="{{ path('musee_collection_modifier', {'id': objet.id}) }}">Modifier</a>
 						<a class="btn btn-danger" href="{{ path('musee_collection_supprimer', {'id': objet.id}) }}">Supprimer</a>
 					</div>					
