--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -49,10 +49,13 @@
 	
 
 		{% block body %}
+			{% block script%}
 			
+			{% endblock %}
 		{% endblock %}
-		<script src="bootstrap/js/jquery.js"></script>
-		<script src="bootstrap/js/bootstrap.js"></script>
+		
+		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
 	</body>
 	
 </html>
