--- a/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
@@ -3,5 +3,39 @@
 {% extends "MuseeSiteBundle::layout.html.twig" %}
 
 {% block body %}
-	<p>1</p>
+	<div class="container-fluid">	
+		<div class="row-fluid">
+			<div class="span5 ">
+				<div id="myCarousel" class="carousel slide">
+				  <div class="carousel-inner thumbnail">
+					<div class="item active"> <img alt="" src="{{ asset('style/hubble.jpg') }}"/>
+					  <div class="carousel-caption">
+						<p>Photo Hubble</p>
+					  </div>
+					</div>
+					<div class="item"> <img alt="" src="{{ asset('style/rover.png') }}"/>
+					  <div class="carousel-caption">
+						<p>Rover Curiosity</p>
+					  </div>
+					</div>
+					<div class="item"> <img alt="" src="{{ asset('style/ariane.jpg') }}"/>
+					  <div class="carousel-caption">
+						<p>Décolage Ariane</p>
+					  </div>
+					</div>
+				  </div>
+				  <a class="carousel-control left" data-slide="prev" href="#myCarousel">‹</a>
+				  <a class="carousel-control right" data-slide="next" href="#myCarousel">›</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% block script%}
+		<script>
+			$(function (){
+			$('.carousel').carousel();
+			});
+		</script>
+	{% endblock %}
 {% endblock %}
+
