--- a/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
@@ -13,7 +13,7 @@
 						<p>Photo Hubble</p>
 					  </div>
 					</div>
-					<div class="item"> <img alt="" src="{{ asset('style/rover.png') }}"/>
+					<div class="item"> <img alt="" src="{{ asset('style/rover.jpg') }}"/>
 					  <div class="carousel-caption">
 						<p>Rover Curiosity</p>
 					  </div>
