--- a/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
@@ -27,7 +27,19 @@
 				</div>
 			</div>
 		</div>
-		{% include "MuseeBlogBundle:Article:ajouterCommentaire.html.twig" %}
-	
+	{% include "MuseeBlogBundle:Article:ajouterCommentaire.html.twig" %}
+	{% for commentaire in commentaires %}
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="offset2 span8 well">
+					<div style="padding-top:5%">
+					<p><small>Le {{comentaire.date|date('d-m-Y')}}</small></p>
+					<p>{{commentaire.contenu|raw}}</p>
+					<p>{{commentaire.auteur}}</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	{% endfor %}
 	
 {% endblock %}
