articles' comments now displayed

--- a/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficher.html.twig
@@ -33,7 +33,7 @@
 			<div class="row-fluid">
 				<div class="offset2 span8 well">
 					<div style="padding-top:5%">
-					<p><small>Le {{comentaire.date|date('d-m-Y')}}</small></p>
+					<p><small>Le {{commentaire.date|date('d-m-Y')}}</small></p>
 					<p>{{commentaire.contenu|raw}}</p>
 					<p>{{commentaire.auteur}}</p>
 					</div>
