--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -26,7 +26,7 @@
 						<ul class="nav">
 							<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
 							<li><a href="{{ path('musee_blog_afficher_liste', {'page' : 1}) }}">Articles</a></li>
-							<li><a href="{{ path('musee_collection_afficher_liste', {'page' : 1}) }}">Collection</a></li>
+							<li><a href="{{ path('musee_collection_plan') }}">Collection</a></li>
 							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
