Connexion procedure is done

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -35,7 +35,11 @@
 								
 						</ul>
 						<div class="pull-right">
-							
+							{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+								<a href="{{ path('logout') }}" class="btn btn-primary btn-small">Déconnexion</a>
+							{% else %}
+								<a href="{{ path('login') }}" class="btn btn-primary btn-small">Connexion</a>
+							{% endif %}
 						</div>
 					</div>
 				</div>
