--- a/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
@@ -5,17 +5,16 @@
 	
 		<div class="container-fluid">
 			<div class="row-fluid">
-				<div class="offset2 span8 well">
-					<h2>
-						Plan du musée de l'espace de la base spatiale de Kourou
-					</h2>
-					<p>
-						Cliquer sur une salle pour voir les objets qui y sont stockés :
-					</p>
-					<p>
-						<br />
-					</p>
-					<p>
+				<div class="offset1 span10 well">
+					<div class="offset2 span8 well" id="conteneur">
+						<h2>
+							Plan du musée de l'espace de la base spatiale de Kourou
+						</h2>
+						<p>
+							<em>Cliquer sur une salle pour voir les objets qui y sont stockés :</em>
+						</p>
+					</div>
+					<p class="text-center">
 					   <img src="{{ asset('style/Plandumusee.png') }}" usemap="#plan_du_musee" alt="Plan du musée"/>
 					</p>
 
