--- a/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
@@ -20,15 +20,15 @@
 
 					<p>
 						<map name="plan_du_musee" id="plan_du_musee">
-							<area shape="rect" coords="348,0,422,50" href="{{ path('musee_collection_afficher_liste', {'page' : 1}) }}" alt="Salle Mercure - Entrée"/>
-							<area shape="rect" coords="250,51,669,246" href="{{ path('musee_collection_afficher_liste', {'page' : 2}) }}" alt="Salle Venus - Boutique"/>
-							<area shape="rect" coords="669,51,924,466" href="{{ path('musee_collection_afficher_liste', {'page' : 3}) }}" alt="Salle Terre"/>
-							<area shape="rect" coords="250,248,668,467" href="{{ path('musee_collection_afficher_liste', {'page' : 5}) }}" alt="Salle Jupiter"/>
-							<area shape="rect" coords="21,51,250,467" href="{{ path('musee_collection_afficher_liste', {'page' : 8}) }}" alt="Salle Neptune"/>
-							<area shape="rect" coords="560,468,922,646" href="{{ path('musee_collection_afficher_liste', {'page' : 4}) }}" alt="Salle Mars"/>
-							<area shape="rect" coords="325,467,558,646" href="{{ path('musee_collection_afficher_liste', {'page' : 6}) }}" alt="Salle Saturne"/>
-							<area shape="rect" coords="21,468,325,646" href="{{ path('musee_collection_afficher_liste', {'page' : 7}) }}" alt="Salle Uranus"/>
-							<area shape="rect" coords="21,647,924,788" href="{{ path('musee_collection_afficher_liste', {'page' : 9}) }}" alt="Salle Soleil - Réserve"/>
+							<area shape="rect" coords="348,0,422,50" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 1}) }}" alt="Salle Mercure - Entrée"/>
+							<area shape="rect" coords="250,51,669,246" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}" alt="Salle Venus - Boutique"/>
+							<area shape="rect" coords="669,51,924,466" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 3}) }}" alt="Salle Terre"/>
+							<area shape="rect" coords="250,248,668,467" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 5}) }}" alt="Salle Jupiter"/>
+							<area shape="rect" coords="21,51,250,467" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 8}) }}" alt="Salle Neptune"/>
+							<area shape="rect" coords="560,468,922,646" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 4}) }}" alt="Salle Mars"/>
+							<area shape="rect" coords="325,467,558,646" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 6}) }}" alt="Salle Saturne"/>
+							<area shape="rect" coords="21,468,325,646" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 7}) }}" alt="Salle Uranus"/>
+							<area shape="rect" coords="21,647,924,788" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 9}) }}" alt="Salle Soleil - Réserve"/>
 						</map>
 					</p>
 				</div>
