--- a/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
@@ -3,6 +3,7 @@
 {% extends "::layout.html.twig" %}
 
 {% block body %}
+
 	<div class="container-fluid">
 		{% for objet in objets %}
 			{% if loop.index is odd %}
@@ -75,7 +76,7 @@
 						{% endif %}
 						{% for p in range(1, nombrePage) %}
 							<li {% if p == page %} class="active" {% endif %}>
-								<a href="{{ path('musee_collection_afficher_liste', {'page' : p}) }}">{{p}}</a>
+								<a href="{{ path('musee_collection_afficher_liste', {'page' : p, 'idSalle' : 'idSalle'}) }}">{{p}}</a>
 							</li>
 						{% endfor %}
 					</ul>
