create user page

--- a/src/Musee/SiteBundle/Resources/views/Site/register.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/register.html.twig
@@ -14,10 +14,11 @@
 					<li><a href="{{ path('musee_pageListeModifUserAdmin', {'page' : 1}) }}">Modifier</a></li>
 					<li><a href="{{ path('musee_pageListeSupprUserAdmin', {'page' : 1}) }}">Supprimer</a></li>
 				</ul>
-			
-				<div class="well">
-					{% render "MuseeUserBundle:Registration:register" %}
-				</div>
+				
+				<h2>Créer un administrateur</h2>
+				<h2>Créer un chercheur</h2>
+				<h2>Créer un adhérent</h2>
+				
 			</div>
 		</div>
 	</div>
