--- a/src/Musee/UserBundle/Resources/views/User/registrationAdmin.html.twig
+++ b/src/Musee/UserBundle/Resources/views/User/registrationAdmin.html.twig
@@ -9,8 +9,8 @@
 					<li class="active">
 					<a href="{{ path('musee_pageEnregistrementAdmin') }}">Enregistrer</a>
 					</li>
-					<li><a href="{{ path('musee_pageListeModifUserAdmin', {'page' : 1}) }}">Modifier</a></li>
-					<li><a href="{{ path('musee_pageListeSupprUserAdmin', {'page' : 1}) }}">Supprimer</a></li>
+					<li><a href="{{ path('musee_modif_user_liste', {'page' : 1}) }}">Modifier</a></li>
+					<li><a href="{{ path('musee_suppr_user_liste', {'page' : 1}) }}">Supprimer</a></li>
 				</ul>
 				
 				<ul class="nav nav-pills">
