--- a/src/Musee/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Musee/UserBundle/Resources/views/Security/login.html.twig
@@ -6,13 +6,16 @@
 		<div>{{ error.message }}</div>
 	{% endif %}
 	
-	{% for flashMessage in app.session.flashbag.get('notice') %}
-    <div class="offset4 span4 text-center well">
-        {{ flashMessage }}
-    </div>
-{% endfor %}
+	
 
 	<div class="container-fluid">
+		<div class="row-fluid">
+			{% for flashMessage in app.session.flashbag.get('notice') %}
+				<div class="offset4 span4 text-center well">
+					{{ flashMessage }}
+				</div>
+			{% endfor %}
+		</div>
 		<div class="row-fluid">
 			<div class = "offset4 span4 text-center ">
 				<form action="{{ path('login_check') }}" method="post" class="well">
