--- a/src/Musee/UserBundle/Resources/views/User/registrationAdmin.html.twig
+++ b/src/Musee/UserBundle/Resources/views/User/registrationAdmin.html.twig
@@ -25,7 +25,7 @@
 		</div>
 		<div class="row-fluid">
 			<div class="offset2 span6 well">
-				<h2>Créer Adhérent</h2>
+				<h2>Créer Administrateur</h2>
 				<hr/>
 				<form method="post" {{ form_enctype(form) }}>
 					{{ form_widget(form) }}
