--- a/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/afficherListe.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 	<div class="container-fluid">
 		<div class="row-fluid">
-			<div class="offset5 span2 well">
+			<div class="offset5 span2 well text-center">
 				<a class="btn btn-primary" href="{{ path('musee_collection_ajouter') }}">Ajouter un nouvel objet</a>
 			</div>
 		</div>
