--- a/src/Musee/BlogBundle/Resources/views/Article/afficherListe.html.twig
+++ b/src/Musee/BlogBundle/Resources/views/Article/afficherListe.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 	<div class="container-fluid">
 		<div class="row-fluid">
-			<div class="offset5 span2 well">
+			<div class="offset5 span2 well text-center">
 				<a class="btn btn-primary" href="{{ path('musee_blog_ajouter') }}">Ajouter un nouvel article</a>
 			</div>
 		</div>
